fixed image size on smaller screens

--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -127,6 +127,14 @@
         padding-top: 4rem;
     }
 
+    .Gimg {
+        max-height: 10rem;
+    }
+
+    .Fimg {
+        max-height: 10rem;
+    }
+
     .desc {
         font-size: 0.8rem;
     }
